// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` debe mostrar items cuando se carga las imgs useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost/cualquier/cosa.png"
    />
    <GifGridItem
      id="DEF"
      key="DEF"
      title="cualquier cosa"
      url="https://localhost/cualquier/cosa.png"
    />
  </div>
</Fragment>
`;

exports[` debe mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
